--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 		</div>
 		<div class="axis">
 			<canvas id="canvas" width="800px" height="200"></canvas>
-			<input class="inp1 display_none" type="text" maxlength="1">
+			<input class="inp1 display_none" type="text" maxlength="1" autofocus>
 			<input class="inp2 display_none" type="text" maxlength="1">
 			<img class="axis-img" src="img/sprite.png" alt="sprite">
 		</div>
 	</div>
 	<div class="done display_none">
-		<p>Задание выполнено :)</p>
+		<button class="done-btn">Решить другой пример</button>
 	</div>
 </body>
 </html>
